[gd_scene load_steps=22 format=2]

[ext_resource path="res://Misc/Fonts/SquarleyEdited.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Misc/Fonts/Squarely.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Player/Rock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/OnlinePlay/BattleLog/PlayerEntry.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Paper.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Scissors.tscn" type="PackedScene" id=6]
[ext_resource path="res://Screens/OnlinePlay/BattleLog/PastBattle.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="DynamicFont" id=31]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=32]
default_font = SubResource( 31 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = SubResource( 30 )
Button/styles/focus = SubResource( 30 )
Button/styles/hover = SubResource( 30 )
Button/styles/normal = SubResource( 30 )
Button/styles/pressed = SubResource( 30 )

[sub_resource type="StyleBoxFlat" id=33]
resource_local_to_scene = true
bg_color = Color( 0.121569, 0.239216, 0.352941, 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=34]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=35]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[sub_resource type="Theme" id=36]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[sub_resource type="Theme" id=37]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[sub_resource type="Theme" id=38]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[sub_resource type="Theme" id=39]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[sub_resource type="Theme" id=40]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[sub_resource type="Theme" id=41]
resource_local_to_scene = true
default_font = SubResource( 34 )
Label/colors/font_color = Color( 0.313726, 0.741176, 1, 1 )

[node name="PastBattle" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -502.0
size_flags_horizontal = 3
theme = SubResource( 32 )
custom_styles/panel = SubResource( 33 )
script = ExtResource( 7 )
allyColour = Color( 0.313726, 0.741176, 1, 1 )
enemyColour = Color( 1, 0.223529, 0.223529, 1 )
winColour = Color( 0.121569, 0.239216, 0.352941, 1 )
lossColour = Color( 0.352941, 0.121569, 0.121569, 1 )
drawColour = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 608.0
margin_bottom = 106.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_right = 598.0
margin_bottom = 106.0
custom_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 106.0
custom_constants/separation = 0
alignment = 1

[node name="Points" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 52.0
margin_bottom = 53.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="AllyPoints" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Points"]
unique_name_in_owner = true
margin_right = 13.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.537255, 0.705882, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 2
valign = 1

[node name="vs" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Points"]
margin_left = 18.0
margin_top = 6.0
margin_right = 34.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 8 )
text = "vs"
valign = 1
uppercase = true

[node name="EnemyPoints" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Points"]
unique_name_in_owner = true
margin_left = 39.0
margin_right = 52.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 0.411765, 0.411765, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
valign = 1

[node name="Outcome" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 53.0
margin_right = 48.0
margin_bottom = 87.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.470588, 0.701961, 1, 1 )
text = "Win"
align = 1
valign = 1
uppercase = true

[node name="PlayerEntries" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 588.0
margin_bottom = 106.0
size_flags_horizontal = 3
theme = SubResource( 35 )
alignment = 1

[node name="0" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerEntries"]
margin_top = 10.0
margin_right = 506.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/PlayerEntries/0"]
margin_bottom = 26.0

[node name="Type" type="Control" parent="MarginContainer/HBoxContainer/PlayerEntries/0/CenterContainer"]
margin_top = 13.0
margin_bottom = 13.0

[node name="Pivot" type="Node2D" parent="MarginContainer/HBoxContainer/PlayerEntries/0/CenterContainer/Type"]
scale = Vector2( 0.8, 0.8 )

[node name="Rock" parent="MarginContainer/HBoxContainer/PlayerEntries/0/CenterContainer/Type/Pivot" instance=ExtResource( 3 )]

[node name="Players" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerEntries/0"]
margin_left = 16.0
margin_right = 506.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Player1" parent="MarginContainer/HBoxContainer/PlayerEntries/0/Players" instance=ExtResource( 4 )]
margin_right = 240.0
theme = SubResource( 36 )

[node name="Player2" parent="MarginContainer/HBoxContainer/PlayerEntries/0/Players" instance=ExtResource( 4 )]
margin_left = 250.0
margin_right = 490.0
theme = SubResource( 37 )

[node name="1" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerEntries"]
margin_top = 40.0
margin_right = 506.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/PlayerEntries/1"]
margin_bottom = 26.0

[node name="Type" type="Control" parent="MarginContainer/HBoxContainer/PlayerEntries/1/CenterContainer"]
margin_top = 13.0
margin_bottom = 13.0

[node name="Pivot" type="Node2D" parent="MarginContainer/HBoxContainer/PlayerEntries/1/CenterContainer/Type"]
scale = Vector2( 0.8, 0.8 )

[node name="Paper" parent="MarginContainer/HBoxContainer/PlayerEntries/1/CenterContainer/Type/Pivot" instance=ExtResource( 5 )]

[node name="Players" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerEntries/1"]
margin_left = 16.0
margin_right = 506.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Player1" parent="MarginContainer/HBoxContainer/PlayerEntries/1/Players" instance=ExtResource( 4 )]
margin_right = 240.0
theme = SubResource( 38 )

[node name="Player2" parent="MarginContainer/HBoxContainer/PlayerEntries/1/Players" instance=ExtResource( 4 )]
margin_left = 250.0
margin_right = 490.0
theme = SubResource( 39 )

[node name="2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerEntries"]
margin_top = 70.0
margin_right = 506.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/PlayerEntries/2"]
margin_bottom = 26.0

[node name="Type" type="Control" parent="MarginContainer/HBoxContainer/PlayerEntries/2/CenterContainer"]
margin_top = 13.0
margin_bottom = 13.0

[node name="Pivot" type="Node2D" parent="MarginContainer/HBoxContainer/PlayerEntries/2/CenterContainer/Type"]
scale = Vector2( 0.8, 0.8 )

[node name="Scissors" parent="MarginContainer/HBoxContainer/PlayerEntries/2/CenterContainer/Type/Pivot" instance=ExtResource( 6 )]

[node name="Players" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerEntries/2"]
margin_left = 16.0
margin_right = 506.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Player1" parent="MarginContainer/HBoxContainer/PlayerEntries/2/Players" instance=ExtResource( 4 )]
margin_right = 240.0
theme = SubResource( 40 )

[node name="Player2" parent="MarginContainer/HBoxContainer/PlayerEntries/2/Players" instance=ExtResource( 4 )]
margin_left = 250.0
margin_right = 490.0
theme = SubResource( 41 )
